<resources>
    <string name="app_name">Final_SMD</string>
    <string name="log_in">Log in</string>
    <string name="hello_astronaut">Hello Astronaut</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Rocket">Rocket</string>
    <string name="Weather">Weather</string>
    <string name="Reserve">Reserve</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
</resources>